--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+  "scripts": {
+    "tailwind:watch": "npx tailwindcss -i ./input.css -o ./styles.css --watch"
   }
 }
